# arduino-cmake

./: .gitignore  CMakeLists.txt  README.md
src/: blink.cpp
